Fix media query, and add new media query for blogs page to make 'Go to Blogs' link not wrap.

--- a/src/components/ScreenLayout/screen-layout.module.css
+++ b/src/components/ScreenLayout/screen-layout.module.css
@@ -4,7 +4,7 @@
     overflow: hidden;
 }
 
-@media (max-width: var(--tablet-breakpoint)) {
+@media (max-width: 780px) {
     .main {
         display: initial;
     }
